# commands-redis-cli

./: .gitlab-ci.yml  Makefile  README.rst  entry-points.txt  pyproject.toml
src/nagare/admin/: commands_redis_cli.py
